--- a/dotnet new GUI.csproj
+++ b/dotnet new GUI.csproj
@@ -7,4 +7,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Ookii.Dialogs" Version="1.0.0" />
+  </ItemGroup>
+
 </Project>
